# scrcpy-with-webui-and-ai

./: .gitignore  README.md  meson.build  meson_options.txt
.claude/: claude.md  skill.md
app/: meson.build
app/data/: ai_ocr_server.py
app/python/: pyproject.toml
app/python/scrcpy_ai/: config.py  main.py
app/python/scrcpy_ai/agent/: agent.py
app/python/scrcpy_ai/clip/: matcher.py
app/python/scrcpy_ai/db/: action_history.py  memory_manager.py
app/python/scrcpy_ai/pipeline/: recorder.py
app/python/scrcpy_ai/static/: index.html
app/python/scrcpy_ai/web/: routes.py
app/src/: cli.c  main.c  options.c  options.h  scrcpy.c
app/src/ai/: ai_agent.c  ai_agent.h  ai_agent_bridge.c  ai_agent_bridge.h  ai_frame_sink.c  ai_frame_sink.h  ai_ocr.c  ai_panel.cpp  ai_panel.h  ai_tools.c  ai_tools.h  openrouter.c  openrouter.h  screenshot.c  screenshot.h  web_server.c  web_server.h  web_ui.h  web_video_sink.c  web_video_sink.h
app/src/trait/: frame_source.h
app/src/util/: base64.c  base64.h
app/src/web/: web_server.c
release/: build_linux.sh  build_windows.sh
